# django-toy-finance

./: .gitignore  README.md  mypy.ini  pyproject.toml
finance/: bank_impl.py  bank_interface.py
finance/tests/: test_bank_impl.py
finance_service/: settings.py
