[project]
name = "django-finance"
version = "0.1.0"
description = ""
authors = [
    {name = "Anthony Honstain"}
]
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2"
psycopg2-binary = "^2.9.10"
gunicorn = "^23.0.0"
django-stubs = "^5.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
